Answer 수정, 삭제 기능 구현